ADD names to the functions

--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d88403b2-03b4-45ea-a38c-2cad198bebd0",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5a6aba72-43b6-4670-8c95-4572eba14825",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
     "    return True\n",
     "\n",
     "# Making selection of data\n",
-    "def helsinki_shufile_line_rule(text: str) -> bool:\n",
+    "def content_width_line_rule(text: str) -> bool:\n",
     "    \"\"\"\n",
     "    Selectors to choose the lines that work for downstream processing\n",
     "    \"\"\"\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "f036a862-5b52-4fe6-8a96-4e6935ec333b",
    "metadata": {},
    "outputs": [],
@@ -506,7 +506,7 @@
     "\n",
     "@f.flowBy(break_text_to_sentences)\n",
     "@f.forEach(lowercase)  # performs the reformatting for each line\n",
-    "@f.filterBy(f.rules(helsinki_shufile_line_rule, shu_file_line_rule))\n",
+    "@f.filterBy(f.rules(shu_file_line_rule, content_width_line_rule))\n",
     "def load_lines_from_file(file_path: Union[str, os.PathLike]) -> List[str]:\n",
     "    file_path = Path(file_path)\n",
     "    assert file_path.exists(), \"The file doesn't exits\"\n",
@@ -517,10 +517,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8dbefd44-fb3a-46f9-adcb-b95dc1dd9933",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object load_lines_from_file at 0x7ffb74222450>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -537,6 +548,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a5c9646-bd12-4b3b-a592-2cb81da7fbe9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ec5df9-b51e-4bae-81f0-710253dbfceb",
    "metadata": {},
    "outputs": [],
    "source": []
