--- a/notebooks/Morphpiece.ipynb
+++ b/notebooks/Morphpiece.ipynb
@@ -1,6 +1,36 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d52bd03-5848-45bf-8f24-9a52fa00bd7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "if \"../\" not in sys.path: sys.path.insert(0,\"../\");"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.9 64-bit ('venv': venv)",
+   "language": "python",
+   "name": "pythonjvsc74a57bd069a7e0843bc35a71a97378535d2c070d3d2cfd63b216ff99a2c8e0e8d31df048"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
