--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "99f75967-f4de-4ff4-8cdc-21e8a6b0acad",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 8,
    "id": "250d7ec4-8fdd-4f91-a644-92090986b999",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 9,
    "id": "7e742263-37f7-4e20-a0c1-28511736b2a8",
    "metadata": {},
    "outputs": [],
@@ -724,6 +724,15 @@
     "        mask_token_dict.update(mask_tokens)\n",
     "        return Vocabulary(token_set, mask_token_dict)\n",
     "    \n",
+    "    def save(self, vocab_file_name: str, base_path: str = \"./\"):\n",
+    "        \"\"\"Saves the data\"\"\"\n",
+    "        pass\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def load_from_file(cls, vocab_file_path: str):\n",
+    "        \"\"\"Load the file\"\"\"\n",
+    "        pass\n",
+    "    \n",
     "    def extra_repr(self) -> Tuple[str, tuple]:\n",
     "        if self._repr_tokens is None:\n",
     "            tokens_ = sorted(self._tk_ls)\n",
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 10,
    "id": "164bb674-3960-4bb4-8dc3-b959fc5abeb1",
    "metadata": {},
    "outputs": [],
@@ -777,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 12,
    "id": "05960b95-479c-4f1f-831a-32e755aa5b36",
    "metadata": {},
    "outputs": [],
@@ -830,6 +839,11 @@
     "    \n",
     "    return sentences\n",
     "\n",
+    "\n",
+    "def is_mask_token(input_: Union[Any, to.mask_token]) -> bool: \n",
+    "    \"\"\"Checks if the input is a mask token\"\"\"\n",
+    "    return isinstance(input_, to.mask_token)\n",
+    "\n",
     "def mask_input(input_: str, apply_rule: Callable, mt_: to.mask_token) -> to.mask_token:\n",
     "    if apply_rule(input_):\n",
     "        return mt_\n",
@@ -847,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 13,
    "id": "a27332dc-c968-45b7-b30a-9e52b9d7c45e",
    "metadata": {},
    "outputs": [
@@ -857,7 +871,7 @@
        "[t'lowercase,', t'remove_punctuations,', t'white_space_cleaning', <num>]"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 15,
    "id": "512e2de3-16af-4f3c-b3fb-a1cad8d20351",
    "metadata": {},
    "outputs": [],
@@ -922,10 +936,6 @@
     "    import re\n",
     "    return re.split(r\"\\s+\", text)\n",
     "\n",
-    "def is_mask_token(input_: Union[Any, to.mask_token]) -> bool: \n",
-    "    \"\"\"Checks if the input is a mask token\"\"\"\n",
-    "    return isinstance(input_, to.mask_token)\n",
-    "\n",
     "\n",
     "class Tokenizer(object):\n",
     "    \"\"\"Tokenizer, uses vocab for reference\"\"\"\n",
@@ -953,8 +963,7 @@
     "        print(input_)\n",
     "        return not self.vocab.has_token(to.token(input_))\n",
     "    \n",
-    "    def transform(self, transform_fn: Callable):        \n",
-    "        # add tokenization for number to <num>\n",
+    "    def transform(self, transform_fn: Callable):\n",
     "        @wraps(transform_fn)\n",
     "        def wrapper(*args, **kwargs):\n",
     "            f_ = self.t(transform_fn)\n",
@@ -1000,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 16,
    "id": "369aa32f-9374-4a18-bb91-69f656079253",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 17,
    "id": "8dbefd44-fb3a-46f9-adcb-b95dc1dd9933",
    "metadata": {},
    "outputs": [],
@@ -1043,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 18,
    "id": "39ec5df9-b51e-4bae-81f0-710253dbfceb",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1062,7 @@
        "Vocabulary(tokens={'kutakuwa, 'mnyamwezi', 'mzigo, ..., zuri.}, masks={<num>, <unk>}, shape=(5419, 2))"
       ]
      },
-     "execution_count": 513,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 19,
    "id": "01a540e4-bed3-4c12-b0fd-5d9fb5e7670c",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1096,7 @@
        "[<unk>, <num>, <num>, <unk>, 'mzigo']"
       ]
      },
-     "execution_count": 515,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
