--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -52,6 +52,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b6cc6a5-8ce6-4b86-be2d-a85f4360c9e1",
+   "metadata": {},
+   "source": [
+    "# KaDemo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7c01e5c3-e537-4ab5-bc0e-8156c2bdac29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "data_path = Path(\"../resources/data\")\n",
+    "helsinki_na_path = data_path / Path(\"./hcs-na-v2\")\n",
+    "\n",
+    "# File to test out the concept\n",
+    "sample_file = helsinki_na_path / Path(\"./new-mat/bunge/han1-2004.shu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ecd0f13-bacc-4a7d-a8d5-b22cbebe75dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def not_have_html(text: str) -> bool:\n",
+    "    return not text.find('<text') > -1\n",
+    "\n",
+    "\n",
+    "def read_file(file):\n",
+    "    with open(file, \"r\") as f:\n",
+    "        return f.readlines()\n",
+    "    \n",
+    "# read_file(sample_file)\n",
+    "not_have_html(\"<text filename=\\\"Helsinki Corpus of Swahili/new-mat/bunge/han1-2004.shu\\\" title=\\\"Majadiliano ya Bunge\\\" year=\\\"200\\\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eedd7cea-efd9-4d35-a7fc-c8f90a3a7b42",
    "metadata": {},
    "source": [
