--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -1062,7 +1062,6 @@
     "\n",
     "\n",
     "# h = f * g\n",
-    "lowercase_read_file = f.apply(lowercase)(read_file_to_str)\n",
     "# def TO_lower_read_file(file_path: os.PathLike = None, text: Optional[str] = None):\n",
     "#     assert file_path is not None or text is not None, \"Specify either `file_path` or `text`\"\n",
     "    \n",
@@ -1073,7 +1072,6 @@
     "\n",
     "\n",
     "# z = Ei\n",
-    "lowercase_read_file_to_lines = f.forEach(lowercase)(read_file_to_lines)\n",
     "# def TO_lowercase_read_file_to_lines(file_path: os.PathLike = None, texts: Optional[List[str]] = None):\n",
     "#     assert file_path is not None or text is not None, \"Specify either `file_path` or `text`\"\n",
     "    \n",
@@ -1083,9 +1081,7 @@
     "#     return [text.lower() for text in texts]\n",
     "\n",
     "\n",
-    "TO_lowercase_read_file_to_lines(file_path=sample_file)\n",
-    "\n",
-    "\n"
+    "TO_lowercase_read_file_to_lines(file_path=sample_file)"
    ]
   },
   {
