--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -1179,9 +1179,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit ('venv': venv)",
+   "display_name": "Python 3.7.10 64-bit ('base': conda)",
    "language": "python",
-   "name": "pythonjvsc74a57bd069a7e0843bc35a71a97378535d2c070d3d2cfd63b216ff99a2c8e0e8d31df048"
+   "name": "python3710jvsc74a57bd033e201b0a5c18280929ab1260f743f5093320c25d0b0152bc916d1a61b0fd0d2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1193,7 +1193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
