update the contents

--- a/notebooks/MaryNLP.ipynb
+++ b/notebooks/MaryNLP.ipynb
@@ -2,14 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4d52bd03-5848-45bf-8f24-9a52fa00bd7c",
+   "execution_count": 1,
+   "id": "e4d387e5-11f4-4d95-a681-a07c16f4e14b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "if \"../\" not in sys.path: sys.path.insert(0,\"../\");"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10565d4e-74e8-40f3-848c-6c790ec9ebe8",
+   "metadata": {},
+   "source": [
+    "## Building utilities for marynlp\n",
+    "\n",
+    "Creating multiple utilities for building models, downloading the files and a tone of other things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3f09cc2-3a30-4b33-b716-e5770585b33f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb07a283-1f1c-44ae-905d-996c18fbdd30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
