--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1261f550-963f-4081-95c6-ed511b04f0e2",
    "metadata": {},
    "outputs": [],
@@ -1179,9 +1179,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('base': conda)",
+   "display_name": "Python 3.7.9 64-bit ('venv': venv)",
    "language": "python",
-   "name": "python3710jvsc74a57bd033e201b0a5c18280929ab1260f743f5093320c25d0b0152bc916d1a61b0fd0d2"
+   "name": "pythonjvsc74a57bd069a7e0843bc35a71a97378535d2c070d3d2cfd63b216ff99a2c8e0e8d31df048"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1193,7 +1193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
