--- a/notebooks/MaryNLP.ipynb
+++ b/notebooks/MaryNLP.ipynb
@@ -23,199 +23,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aa98a8fa-8ff3-4bf8-b7b8-f1ac0c2396e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3f09cc2-3a30-4b33-b716-e5770585b33f",
+   "execution_count": 2,
+   "id": "7766d9ea-6a86-487d-814c-5755f3ae6111",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# downloading the data\n",
-    "\n",
-    "def cache_from_google_bucket(online_path: str, save_path: str, credentials_json_path: str, bucket_name: str = STORAGE_BUCKET, overwrite: bool = True, **bucket_blob_args):\n",
-    "    \n",
-    "    # Gets the google client associated with the service account\n",
-    "    # NOTE: a valid service account needs to have the marynlp-private storage\n",
-    "    google_client = None\n",
-    "    \n",
-    "    try:\n",
-    "        google_client = storage.Client.from_service_account_json(str(credentials_json_path))\n",
-    "    except DefaultCredentialsError:\n",
-    "        logger.error('Unable to get client from credentials path')\n",
-    "        raise\n",
-    "    \n",
-    "    save_path = Path(save_path)\n",
-    "    \n",
-    "    if save_path.exists():\n",
-    "        logger.info('Data already exists in \\'%s\\'' % (str(save_path)))\n",
-    "        \n",
-    "        # if overwrite is false\n",
-    "        if not overwrite:\n",
-    "            logger.info('')\n",
-    "            return False\n",
-    "        \n",
-    "        # ...\n",
-    "        # overrite is true\n",
-    "        logger.info('Overwriting contents')\n",
-    "        \n",
-    "    bucket = google_client.get_bucket(bucket_name)\n",
-    "    \n",
-    "    blob = bucket.blob(online_path, **bucket_blob_args)\n",
-    "    blob.download_to_filename(str(save_path))\n",
-    "    \n",
-    "    logger.info('Contents in [%s:%s] have been cached to \\'%s\\'' % (bucket_name, str(online_path), str(save_path)))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9f2fa7a-e82c-490d-a10f-fc8893eeaabd",
-   "metadata": {},
-   "source": [
-    "### For working with files in GCP\n",
-    "\n",
-    "Working with files in the GCP"
+    "## Module downloading sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "eb07a283-1f1c-44ae-905d-996c18fbdd30",
+   "execution_count": 3,
+   "id": "3264e557-8c5a-4453-827d-3f75e90d8680",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from typing import Union, Optional\n",
+    "flair_gcp = {\n",
+    "    'sw-exp-sent_analy-small': 'flair/classifier/sw-exp-sent_analy-small.zip',\n",
+    "    'early-wpc': 'flair/classifier/exp-wpc-small.zip',\n",
+    "    'early-sentiment-hasf': 'flair/classifier/sw-ft100-ffw-bilstm-exp-sent_analy-small-h256-noreproj.zip',\n",
+    "    'early-alpha-tag-ner': 'flair/taggers/sw-ner-gen1f-base.zip',\n",
+    "    'early-alpha-tag-pos': 'flair/taggers/sw-pos-early-h256.zip',\n",
+    "}\n",
     "\n",
-    "# stored in `marynlp.utils.storage.google`\n",
-    "\n",
-    "from google.cloud.storage import Client as GCStorageClient\n",
-    "from google.cloud.storage.bucket import Bucket as GCBucket\n",
-    "from google.cloud.storage.blob import Blob as GCBlob\n",
-    "\n",
-    "# creating the function that we need to download contents from the \n",
-    "#  create utilities on to that you can use to create helpful information abou the output of the model\n",
-    "def get_google_bucket_storage_client_from_credential_file(credential_file: Union[str, os.PathLike]) -> GCStorageClient:\n",
-    "    return GCStorageClient.from_service_account_json(str(credential_file))\n",
-    "\n",
-    "def get_bucket_from_client(bucket_name: str, storage_client: GCStorageClient, *args, **kwargs) -> GCBucket:\n",
-    "    bucket = storage_client.get_bucket(bucket_name, *args, **kwargs)\n",
-    "    return bucket\n",
-    "\n",
-    "def get_blob_from_bucket(blob_name: str, bucket: GCBucket, *args, **kwargs) -> GCBlob:\n",
-    "    return bucket.blob(blob_name, *args, **kwargs)\n",
-    "\n",
-    "def save_to_file(save_to_path: str, blob: GCBlob):\n",
-    "    # save the contents of the file\n",
-    "    blob.download_to_filename(save_to_path)"
+    "small_one = \"flair-h_128-nl_1-f-char_lvl.zip\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "cf87260e-d22d-491f-b8da-19c83086ded0",
+   "execution_count": 9,
+   "id": "67c64ac5-8ca7-4eb6-8d0a-07bd53109e0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_256KB = 1024 * 256;\n",
+    "from marynlp.utils import storage\n",
     "\n",
-    "storage_client_path = \"../resources/mary_africa_credentials_key.json\"\n",
+    "def get_model_path_from_bucket(model_path: str):\n",
+    "    pass\n",
     "\n",
-    "# get_google_bucket_storage_client_from_credential_file(\"wrong_file\")\n",
-    "gc = get_google_bucket_storage_client_from_credential_file(storage_client_path)\n",
-    "bucket = get_bucket_from_client(\"inspired-nlp-bucket\", gc)\n",
-    "blob = get_blob_from_bucket('ner.txt', bucket, chunk_size=1 * _256KB)\n"
+    "bucket = storage.get_bucket(\"../resources/mary_africa_credentials_key.json\", \"marynlp-private\")\n",
+    "\n",
+    "# create the path\n",
+    "from pathlib import Path\n",
+    "save_path = Path(\"./temp/stuff.zip\")\n",
+    "save_path.parent.mkdir(exist_ok=True)\n",
+    "path = storage.localize_google_cloud_file(\"flair-h_128-nl_1-f-char_lvl.zip\", bucket=bucket, save_to_path=\"./temp/stuff.zip\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38db34bd-196d-4938-829d-8f17d0082d15",
+   "execution_count": 11,
+   "id": "74537ba3-0287-47a5-9eef-83adef3bcf44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## file_system\n",
-    "def get_local_path"
+    "# Unzip the path\n",
+    "storage.unzip_file(path, './stuff_contents')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "147270f0-03eb-46ba-b410-213eaedccdfd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:marynlp:Downloading 'ner.txt'...\n",
-      "INFO:marynlp:Download complete: sample_file\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Store file\n",
-    "import logging\n",
-    "LOGGER_KEY = 'marynlp'\n",
-    "\n",
-    "nena_logger = logging.getLogger(LOGGER_KEY)\n",
-    "\n",
-    "\n",
-    "def download_from_bucket(blob_name: str, save_filename: str, bucket: GCBucket):\n",
-    "    nena_logger.info(\"Downloading '%s'...\" % blob_name)\n",
-    "    blob = get_blob_from_bucket(blob_name, bucket)\n",
-    "    save_to_file(save_filename, blob)\n",
-    "    nena_logger.info('Download complete: ' + save_filename)\n",
-    "    \n",
-    "download_from_bucket('ner.txt', 'sample_file', bucket)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "87844370-e172-484c-abb2-dde8275a0ad1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## unzip the file\n",
-    "from typing import Optional\n",
-    "\n",
-    "def unzip_file(file_to_zip: str, save_to_path: Optional[str] = None):\n",
-    "    \"\"\"Unpacks the contents of `file_to_zip` to the location `save_to_path`\"\"\"\n",
-    "    from zipfile import ZipFile\n",
-    "\n",
-    "    with ZipFile(file_to_zip, mode='r') as zpf:\n",
-    "        zpf.extractall(path=save_to_path)\n",
-    "\n",
-    "# unzip_file(\"../resources/operate_on/assets_20201211204302.zip\", \"here\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "76b315b3-ff13-4075-8060-d3523a275a08",
+   "execution_count": 14,
+   "id": "2798688b-5b9f-4650-b573-102234009493",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'"
+       "'/tmp/tmp7m30mcf_/flair-h_128-nl_1-f-char_lvl.zip'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bytes(60).decode('ascii')"
+    "temp_path = storage.local.get_temp_path(\"flair-h_128-nl_1-f-char_lvl.zip\"); temp_path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "648899be-1966-4ff0-83fe-b55397eab844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marynlp.utils import storage\n",
+    "\n",
+    "\n",
+    "def download_file_from_google_temporary(cloud_file_blob_name: str, bucket):\n",
+    "    store_local_path = storage.local.get_temp_path(cloud_file_blob_name)\n",
+    "    return download_file_from_google(cloud_file_blob_name, bucket, store_local_path)\n",
+    "\n",
+    "def download_file_from_google_to_store(cloud_file_blob_name: str, bucket):\n",
+    "    store_local_path = storage.local.get_path_from_store(cloud_file_blob_name)\n",
+    "    return download_file_from_google(cloud_file_blob_name, bucket, store_local_path)\n",
+    "\n",
+    "def download_file_from_google(cloud_file_blob_name: str, bucket, save_to_path: str):\n",
+    "    # create parent folders\n",
+    "    Path(save_to_path).parent.mkdir(exist_ok=True)\n",
+    "    return storage.localize_google_cloud_file(cloud_file_blob_name, bucket=bucket, save_to_path=save_to_path)\n",
+    "\n",
+    "def prepare_zipped_model_from_google(cloud_file_blob_name: str, bucket, folder_name_for_contents: str = None):\n",
+    "    # download model to temporary location\n",
+    "    print('Downloading:', cloud_file_blob_name)\n",
+    "    temp_zipped_path = download_file_from_google_temporary(cloud_file_blob_name, bucket)\n",
+    "    print(\"Temp path:\", temp_zipped_path)\n",
+    "    \n",
+    "    store_folder_name = folder_name_for_contents\n",
+    "    if folder_name_for_contents is None:\n",
+    "        # get the new name\n",
+    "        store_folder_name = \".\".join(cloud_file_blob_name.split(\".\")[:-1])  \n",
+    "    \n",
+    "    # unzip to differen location\n",
+    "    store_folder_path = storage.local.get_path_from_store(store_folder_name)\n",
+    "    storage.unzip_file(temp_zipped_path, store_folder_path)    \n",
+    "    print(\"Unzipped to path:\", store_folder_path)\n",
+    "    \n",
+    "    return str(store_folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "124fe58c-74a1-45aa-9a8d-4a89d596f553",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: flair-h_128-nl_1-f-char_lvl.zip\n",
+      "Temp path: /tmp/tmpbv4tdenj/flair-h_128-nl_1-f-char_lvl.zip\n",
+      "Unzipped to path: /home/iam-kevin/.marynlp/store/flair-h_128-nl_1-f-char_lvl\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_location = prepare_zipped_model_from_google(\"flair-h_128-nl_1-f-char_lvl.zip\", bucket)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a0ea497c-e787-4535-bebb-c4959d8ed6a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marynlp import funcutils as f\n",
+    "\n",
+    "# Flair relatedel models\n",
+    "FLAIR_TEXT_CLASSIFIERS = {\n",
+    "    'sw-exp-sent_analy-small': ('flair/classifier/sw-exp-sent_analy-small.zip', True),\n",
+    "    'early-wpc': ('flair/classifier/exp-wpc-small.zip', True),\n",
+    "    'early-sentiment-hasf': ('flair/classifier/sw-ft100-ffw-bilstm-exp-sent_analy-small-h256-noreproj.zip', True)\n",
+    "}\n",
+    "\n",
+    "FLAIR_SEQUENCE_TAGGERS = {\n",
+    "    'early-alpha-tag-ner': ('flair/taggers/sw-ner-gen1f-base.zip', True),\n",
+    "    'early-alpha-tag-pos': ('flair/taggers/sw-pos-early-h256.zip', True)\n",
+    "}\n",
+    "\n",
+    "def get_model_from_google_bucket(src: str, flair_model_path_dict, bucket):\n",
+    "    \"\"\"Gets the model\"\"\"\n",
+    "    if src not in flair_model_path_dict:\n",
+    "        assert Path(src).exists(), \"The model path '%s' doesn't exist\" % src\n",
+    "        return src\n",
+    "    \n",
+    "    # download the model and provice it\n",
+    "    blob_name, zipped = flair_model_path_dict[src]\n",
+    "    \n",
+    "    if zipped:\n",
+    "        # downloads the model and unzip\n",
+    "        return prepare_zipped_model_from_google(blob_name, bucket)\n",
+    "    \n",
+    "    # if not zipped\n",
+    "    return download_file_from_google_to_store(blob_name, bucket)\n",
+    "\n",
+    "build_sequence_tagger: SequenceTagger = f.apply(SequenceTagger.load)(get_model_from_google_bucket)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7699651-5b78-4bc9-83db-0a8be81a41c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
