UPDATE working `sed`

--- a/notebooks/MaryNLP.ipynb
+++ b/notebooks/MaryNLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e4d387e5-11f4-4d95-a681-a07c16f4e14b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7766d9ea-6a86-487d-814c-5755f3ae6111",
    "metadata": {},
    "outputs": [],
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "c7699651-5b78-4bc9-83db-0a8be81a41c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/tmp/tmp7onungq4/models/sed_morpheme_template.txt'"
+       "'/tmp/tmpntdygnkv/models/sed_morpheme_template.txt'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,8 +61,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3f512ead-86d5-4cbc-891e-382a497db6fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('wa', 'lis', 'ma')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from experimental.sed import MorphologyAnalyzer\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "class WordBreaker(object):\n",
+    "    def __init__(self, ma: MorphologyAnalyzer):\n",
+    "        self.ma_ = ma\n",
+    "        \n",
+    "    def break_word(self, word: str) -> Tuple[str]:\n",
+    "        return tuple([ su for su in self.ma_.break_text([word])[word]])\n",
+    "    \n",
+    "analyzer = MorphologyAnalyzer(morpheme_template_file); analyzer\n",
+    "bk = WordBreaker(analyzer)\n",
+    "bk.break_word(\"walisema\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62567f69-bc5a-4e43-914a-4aa59ca45712",
    "metadata": {},
    "outputs": [],
    "source": []
