--- a/notebooks/ForAPI.ipynb
+++ b/notebooks/ForAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "579133ac-2e12-4201-a115-3fc7db44af94",
    "metadata": {},
    "outputs": [],
@@ -60,6 +60,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "17faa09c-2010-4225-8ab6-29245ee4a11b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tmp/tmpe8phiri8/models/sed_morpheme_template.txt'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting up the bucket to load the data\n",
+    "# -----------------------------------------\n",
+    "\n",
+    "## Using the SED Morpheme template\n",
+    "from marynlp.utils.storage import download as dl\n",
+    "from marynlp.utils import storage\n",
+    "\n",
+    "# setup the download bucket\n",
+    "bucket = storage.get_bucket(\"../resources/mary_africa_credentials_key.json\", \"marynlp-private\")\n",
+    "\n",
+    "morpheme_template_file = dl.file_from_google_temporary(\"models/sed_morpheme_template.txt\", bucket); morpheme_template_file"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "57a68279-5768-4079-ac7b-3c69da64669b",
    "metadata": {},
@@ -87,11 +118,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25494ec6-418d-459e-b63d-57167549e1c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<experimental.sed.morphology.MorphologyAnalyzer at 0x7f9107c9d510>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from experimental.sed import MorphologyAnalyzer\n",
+    "\n",
+    "morpheme_template_file = dl.file_from_google_temporary(\"models/sed_morpheme_template.txt\", bucket); morpheme_template_file\n",
+    "analyzer = MorphologyAnalyzer(morpheme_template_file); analyzer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4479c023-166e-4e06-8e4e-566e72c7d536",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('ana', 'e', 'nda')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing component\n",
+    "# -------------------------\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "class WordBreaker(object):\n",
+    "    def __init__(self, ma: MorphologyAnalyzer):\n",
+    "        self.ma_ = ma\n",
+    "        \n",
+    "    def break_word(self, word: str) -> Tuple[str]:\n",
+    "        return tuple([ su for su in self.ma_.break_text([word])[word]])\n",
+    "\n",
+    "bk = WordBreaker(analyzer)\n",
+    "bk.break_word(\"anakuja\")"
+   ]
   },
   {
    "cell_type": "markdown",
